# un260-v0

./: CMakeLists.txt  lv_conf.h  lv_drv_conf.h  lv_fbdev.h  main.c
un260/lv_components/: lv_components.c  lv_components.h
un260/lv_core/: lv_page_declear.h  lv_page_event.c  lv_page_event.h  lv_page_manager.c  lv_page_manager.h  page_01_main.c  page_01_main.h  page_02_list.c  page_02_list.h  page_03_menu.c  page_03_menu.h  page_04_set.h  page_05_set_password.c  page_05_set_password.h  page_06_settings.c  page_06_settings.h  page_07_curr.c  page_07_curr.h  page_08_boot.c  page_08_boot.h  page_09_cis_cala.c  page_09_cis_cala.h  page_10_debug.c  page_10_debug.h  page_11_timeset.c  page_11_timeset.h  page_12_sensor.c  page_12_sensor.h
un260/lv_drivers/: lv_drivers.c  lv_drivers.h
un260/lv_refre/: lvgl_refre.c  lvgl_refre.h
un260/lv_resources/: lv_image_declear.h  lv_img_init.c  lv_img_init.c.backup  lv_img_init.h  page_01_collect_icon.c  page_01_curr_USD.c  page_01_esc_icon.c  page_01_list_icon.c  page_01_menu_icon.c  page_01_mode_icon.c  page_01_print_icon.c  page_01_set_icon.c  page_01_start_icon.c  page_01_usb_icon.c  page_02_home_icon.c  page_03_del_icon.c  page_03_ok_icon.c
un260/lv_resources/lv_curr/: CURR_CNY.c  CURR_EGP.c  CURR_EUR.c  CURR_GBP.c  CURR_ISK.c  CURR_PHP.c  CURR_SOS.c  CURR_TRY.c  CURR_USD.c
un260/lv_system/: lv_control.h  lv_str.c  lv_str.h  machine_time.c  machine_time.h  platform_app.c  platform_app.h  user_cfg.c  user_cfg.h
